discussion/kv_engine/161405/161405_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: MB-48038: Enforce KVBucket::checkpointMaxSize

The patch enables checkpoint creation driven by the mem-usage of the single
checkpoint.

Change-Id: I6f3199f8a0f72d47b65e29d233d7b4e0d56bf382

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-09-14 06:41:04.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-14 06:47:48.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33908/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/build/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
fatal error: "gmock/gmock.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33908/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39804/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\build\tlm\deps\folly.exploded\include\folly/portability/GTest.h(32): fatal error C1083: Cannot open include file: "gtest/gtest.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39804/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12332/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12332/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12332/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1973/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1973/ )

Compile error at [2021-09-14T06:42:06.328Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: "gtest/gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1973/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13949/ : FAILURE

Compile error at [2021-09-14T06:42:14.539Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: gtest/gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13949/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13089/ : FAILURE

Compile error at [2021-09-14T06:44:37.653Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: "gtest/gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13089/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14682/ : FAILURE

Compile error at [2021-09-14T06:43:35.731Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: "gtest/gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14682/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14189/ : FAILURE

Compile error at [2021-09-14T06:43:37.143Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: gtest/gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14189/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22182/ : FAILURE

Compile error at [2021-09-14T06:44:23.301Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: "gtest/gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22182/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1991/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11122/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
